--- a/src/intro.tex
+++ b/src/intro.tex
@@ -2,7 +2,7 @@
 
 2016年の5月に、IT分野で大事件が起こりました。
 これまでユーザを悩ませ続けてきたパスワードの定期変更が無意味である事が
-マイクロソフトによって公開され\cite{MS}、またNISTもそれに続きました。
+マイクロソフトによって公開され、またNISTもそれに続きました。
 私はこれに納得できませんでした。
 パスワードの定期変更は、ユーザだけでなくサービスを提供する側の落ち度
 でパスワードが漏洩した場合の対策だったはずでした。
@@ -20,6 +20,15 @@
 
 はい。これで納得がいきました。パスワードはオワコン、これからは多要素認証の
 時代だぜ！という内容でした。
+
+そもそも認証とは、
+\begin{itemize}
+	\item その人しか知らないもの(パスワードなど)
+	\item その人しか持っていないもの（ワンタイムトークンなど）
+	\item その人の一部（生体認証）
+\end{itemize}
+を用いてユーザを特定することです。
+多要素認証は、これらの複数を用いてユーザを特定することをいいます。
 
 と、いうことで、今回はWebサーバであるnginxで、Google Authenticator を
 使った多要素認証モジュールを作ってみましょう。
