--- a/src/main.tex
+++ b/src/main.tex
@@ -1,4 +1,4 @@
-\documentclass[report, a5paper]{jsbook}
+\documentclass[report, b5paper]{jsbook}
 %\usepackage{draftcopy}
 \usepackage{graphicx}
 \usepackage{amsmath, amssymb}
@@ -13,5 +13,6 @@
 \include{intro}
 \include{nginx-lua}
 \include{totp}
+\include{imple}
 \include{colophon}
 \end{document}
