--- a/src/nginx-lua.tex
+++ b/src/nginx-lua.tex
@@ -5,7 +5,9 @@ Luaで拡張できるというモジュールです。
 以下のようにLuaで記述可能なフックがいくつも用意されていますので、様々な拡張が可能です。
 
 \begin{figure}
+\begin{center}
 \scalebox{.3}{\includegraphics{order.ps}}
+\end{center}
 \caption{Luaで記述可能なフックと呼び出される順番}
 \end{figure}
 
