--- a/src/cover.tex
+++ b/src/cover.tex
@@ -1,40 +1,13 @@
 \begin{center}
-\scalebox{3}{\texttt{nginxでLuaLuaする}}\\
+\scalebox{4}{\texttt{nginxでLuaLuaする}}\\
 \vspace{3em}
-\scalebox{2}{\texttt{2016年8月}}\\
-\vspace{1em}
-\scalebox{2}{\texttt{C90}}\\
+\scalebox{3}{\texttt{C90}}\\
 \vspace{6em}
-\scalebox{2.}{\texttt{lua nginx moduleでつくる}}\\
-\scalebox{2}{\texttt{二要素認証システム}}\\
-\vspace{4em}
+\scalebox{3}{\texttt{lua-nginx-moduleでつくる}}\\
+\vspace{1em}
+\scalebox{3}{\texttt{多要素認証システム}}\\
+\vspace{25.5em}
+\scalebox{2}{\texttt{@jm6xxu}}\\
+\vspace{2em}
 \end{center}
-%
-\begin{comment}
-\begin{eqnarray*}
-\scalebox{1.5}{$\displaystyle
-\nabla \times \bm{E} = -\frac{\partial \bm{B}}{\partial t}
-$}
-\end{eqnarray*}
-%
-\begin{eqnarray*}
-\scalebox{1.5}{$\displaystyle
-\nabla \times \bm{H} = \bm{J} + \frac{\partial \bm{D}}{\partial t}
-$}
-\end{eqnarray*}
-%
-\begin{eqnarray*}
-\scalebox{1.5}{$\displaystyle
-\nabla \cdot \bm{D} = \rho 
-$}
-\end{eqnarray*}
-%
-\begin{eqnarray*}
-\scalebox{1.5}{$\displaystyle
-\nabla \cdot \bm{B} = 0
-$}
-\end{eqnarray*}
-\end{comment}
-%
-\vspace{15.5em}
-\hspace{26em}\scalebox{0.8}{\includegraphics{by-sa.eps}}
+\hspace{35em}\scalebox{0.8}{\includegraphics{by-sa.eps}}
