--- a/src/totp.tex
+++ b/src/totp.tex
@@ -10,11 +10,90 @@ nginxに組み込むわけですが、パスワード以外の何を使って認
 する手があります。今回はGoogle Authenticator や、IIJ SmartKey が使っている
 TOTP (Time based One Time Password)を採用しましょう。
 
+\section*{TOTP}
 TOTPはRFC6238で規定されています。ワンタイムパスワードの生成は簡単です。
 \begin{enumerate}
-\item 鍵となる数値を$key$とする
+\item 鍵となる数値を$secret$とする
 \item パスワードの有効期限を30秒とし、epochからの秒数を30で割って、小数点以下を切り捨てた整数値を$step$とする
-\item この$key$を鍵として、stepをコンテンツとするHMAC-SHA1を計算
-\item 計算したHMAC-SHA1の下位4bitを$offset$と
+\item この$secret$を鍵として、stepをコンテンツとするHMAC-SHA1を計算
+\item 計算したHMAC-SHA1の下位4bitを$offset$とする
+\item HMAC-SHA1のoffsetバイトから4byte取り出し、0x7FFFFFFFとANDをとる
+\item 最後に必要な桁数を下位の桁から取り出す
 \end{enumerate}
 
+注意してほしいのは、$secret$も$step$もビッグエンディアンで使用する
+ということです。ここでずいぶんハマりました。
+
+TOTPではユーザとサービス・プロバイダでHMAC-SHA1を計算する時に必要な鍵を
+共有します。この共有鍵と時刻をパラメータにした同じアルゴリズムで
+計算した値を比較することでユーザの認証を行います。
+
+この方式の素晴らしい点は、ログイン時に鍵が通信経路に乗らないことです。
+また、ログインに使用するトークンは30秒毎に変化しますので、
+仮に中間者攻撃を受けてトークンが漏洩しても、そのトークンが使えるのは30秒間
+だけです。
+また、トークンから鍵を復号するにはものすごく莫大な計算量が必要で
+現実的ではありません。
+
+さて、実装時にはLuaでトークンを計算するのですが、どうやらnginxに
+組み込まれているLua5.1は、ビット演算をサポートしていないようです。
+よって、泣く泣くC++で関数を書いてFFI(Foreign Function Interface)を使って
+呼び出すことにした。トークンを計算するOpenSSLを使ったC++のコードを
+Listing \ref{list:gettoken} に示します。
+
+\begin{lstlisting}[caption=トークンの計算(C++),label=list:gettoken]
+uint32_t get_token(const unsigned char *key,const int keylen, 
+             	   const unsigned char *step, const uint16_t digits)
+{
+  unsigned char hash[SHA_DIGEST_LENGTH];
+  unsigned int len;
+
+  HMAC(EVP_sha1(), key, keylen, 
+       step, 8, hash, &len);
+
+  uint32_t binary = ((hash[offset]&0x7F)<< 24)
+     | ((hash[offset+1]&0xFF)<< 16)
+     | ((hash[offset+2]&0xFF)<<8)
+     | ((hash[offset+3]&0xFF));
+
+  return binary%(uint64_t)powl(10,digits);
+}
+\end{lstlisting}
+
+Luaから呼ばれる関数は、extern "C"宣言が必要です。
+C++11の機能を使っています。ここでは使っていませんが
+右辺値参照がすばらしいので、もうC++99には戻れません。
+g++6.1はデフォルトでC++14とのことですので、
+もうC++99は忘れても良いでしょう。
+
+\begin{lstlisting}[caption=呼び出し用の関数,label=list:caller]
+typedef std::vector<uint8_t> byte_array;
+typedef std::array<unsigned char, 8> step_t;
+
+extern "C" void get_token(const char *key, char *result, uint16_t len)
+{
+        step_t step;
+        byte_array bKey;
+        
+		{
+        	uint64_t t = htobe64(ticks/30);
+        	memcpy(step.data(), &t, step.size());
+		}
+
+        hex2byte(key, &bKey);
+
+        uint32_t tkn = get_token(bKey.data(), 10, step.data(), len);
+        stringstream s;
+        s<<setfill('0')<< setw(6)<< tkn;
+        strncpy(result, s.str().c_str(), len);
+        result[len-1] = '\0';
+}
+\end{lstlisting}
+
+最後にコンパイルして、共有ライブラリを作成します。
+こんな感じになるでしょう。
+
+\begin{lstlisting}[caption=共有ライブラリの作成,label=list:sharedlib]
+$ g++ -fPIC -shared --std=c++11 `pkg-config --cflags --libs openssl` -o libtotp.so totp.cc
+\end{lstlisting}
+これで、トークンを計算するlibtotp.soができました。
