--- a/src/intro.tex
+++ b/src/intro.tex
@@ -5,22 +5,21 @@
 マイクロソフトによって公開され、またNISTもそれに続きました。
 私はこれに納得できませんでした。
 パスワードの定期変更は、ユーザだけでなくサービスを提供する側の落ち度
-でパスワードが漏洩した場合の対策だったはずでした。
+でパスワードが漏洩した場合の対策だったはずです。
 
-問題の文書``Microsoft Password Guidance''を入手して読んでみると
+そこで問題の文書``Microsoft Password Guidance''を入手して読んでみると
 衝撃的なことが書いてありました。曰く、
 \begin{quote}
-ユーザにパスワードの定期変更や、長くて大文字小文字数字を含むパスワードを
-要求しても、クソみたいに弱いパスワードしか使わない。
+パスワードの定期変更や、長くて大文字小文字数字を含むパスワードを
+要求しても、ユーザーはクソみたいに弱いパスワードしか使わない。
 \end{quote}
 曰く、
 \begin{quote}
 そんなもん意味ねーから、多要素認証使おうぜ。
 \end{quote}
 
-はい。これで納得がいきました。パスワードはオワコン、これからは多要素認証の
+これで納得がいきました。パスワードはオワコン、これからは多要素認証の
 時代だぜ！という内容でした。
-
 そもそも認証とは、
 \begin{itemize}
 	\item その人しか知らないもの(パスワードなど)
