add GitHub repository URL

--- a/src/colophon.tex
+++ b/src/colophon.tex
@@ -18,20 +18,19 @@
 みなさんへの課題としておきましょう。
 断じて、DBに平文で保存してはいけません。ソルト、ハッシュ、ストレッチです。
 この辺りのことも含めて、後日加筆するかもしれません。
-この原稿は、GitHubで管理されていますので、下にあるGitHubリポジトリを
+この原稿は、GitHubリポジトリ(https://github.com/chomy/lualua)
+でバージョン管理していますので、このリポジトリを
 watchすると更新時にお知らせが届きます。
 
-紙でこの同人誌を入手された方は、下のGitHubリポジトリに
-PDF版も入手可能です。また電子版で入手したけれども紙も欲しいという方も
-面付け済みのPDFをGitHubにアップロードしていますので、短辺とじ両面印刷
-でコピー本を作成することができます。
+紙でこの同人誌を入手された方は、GitHubリポジトリで電子版PDFも入手可能です。
 
 最後に、この同人誌はDebian/GNU Linux、\TeX Live2016、
 psutils、git、GNU Make、vimといった、オープンソースソフトウェアを使って作成されました。フォントはIPAexフォントをPDFに埋め込んでいます。
 ありがとうございました。
 
 \begin{flushright}
-2016年8月13日　Keisuke Nakao (@jm6xxu) 
+2016年8月13日　Keisuke Nakao (@jm6xxu)\\
+GitHub: https://github.com/chomy/lualua
 \end{flushright}
 \subsection*{参考文献}
 \begin{itemize}
